trying to make the new page work

--- a/app/views/tracked_items/index.html.erb
+++ b/app/views/tracked_items/index.html.erb
@@ -1,3 +1,18 @@
 <% @tracked_items.each do |item| %>
-    <p><%= item.item_name %></p>
+
+    <p><%= "(#{item.id}) #{item.item_name}" %></p>
+    <%# pretty print price_data lowest_price and volume keys %>
+    <% if item.price_data %>
+        <p><%= "Lowest Price: #{JSON.parse(item.price_data)["lowest_price"]}" %></p>
+        <p><%= "Volume: #{JSON.parse(item.price_data)["volume"]}" %></p>
+    <% else %>
+        <p><%= '"if item.price_data" failed' %></p>
+    <% end %>
+
+    <%# access tracked_item_price_data(item) via POST %>
+    <%= form_tag tracked_item_price_data_path(item), method: :post do %>
+        <%= hidden_field_tag :tracked_item_id, item.id %>
+        <%= submit_tag "Get Price Data" %>
+    <% end %>
+
 <% end %>
