--- a/app/views/tracked_items/new.html.erb
+++ b/app/views/tracked_items/new.html.erb
@@ -1,20 +1,6 @@
-<h1>TrackedItems#create</h1>
-<p>Find me in app/views/tracked_items/create.html.erb</p>
-<%= form_for @tracked_item do |form| %>
-  <p>
-    <%= form.label :item_name %><br />
-    <%= form.text_field :item_name %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+<%= content_for :title, "New Tracked Item"  %>
+<h1>New Tracked Item</h1>
 
-<style>
-  h1 {
-    color: white;
-  }
-  p {
-    color: white;
-  }
-</style>
+<%= render 'form', tracked_item: @tracked_item %>
+
+<%= link_to 'Back', tracked_items_path %>
