--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,9 +11,41 @@ body {
   padding: 0;
 }
 
-/* use dark color that is smooth on the eyes */
 main {
-  padding: 2rem;
   height: 100vh;
   background-color: #334;
+}
+
+/* Navbar styling */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: #1f202c;
+}
+
+.navbar-home {
+  margin-right: 2rem;
+}
+
+.navbar-button {
+  background-color: #0f8ff1;
+  color: #000;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+/* input type submit black text */
+input[type="submit"] {
+  color: #000;
+}
+
+button {
+  background-color: #0f8ff1;
+  color: #000;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  text-decoration: none;
 }
