create columns for storing price data

--- a/app/views/tracked_items/_tracked_item.html.erb
+++ b/app/views/tracked_items/_tracked_item.html.erb
@@ -8,14 +8,14 @@
     <a target="_blank" href=<%= "#{item.steam_market_price_overview_url}"%>>
       (json)
   </td>
-  <% if item.price_data && item.price_data["success"] != false %>
-    <td><%= JSON.parse(item.price_data)["lowest_price"] %></td>
-    <td><%= JSON.parse(item.price_data)["volume"] %></td>
+  <% if item.price_overview_json && item.price_overview_json["success"] != false %>
+    <td><%= item.price_overview_json["lowest_price"] %></td>
+    <td></td>
   <% else %>
     <td colspan="2">failed</td>
   <% end %>
   <td>
-    <%= form_with url: tracked_item_price_data_path(item), method: :post, local: true do %>
+    <%= form_with url: tracked_item_price_overview_json_path(item), method: :post, local: true do %>
       <%= hidden_field_tag :tracked_item_id, item.id %>
       <%= submit_tag "Get Price Data" %>
     <% end %>
