--- a/app/views/tracked_items/index.html.erb
+++ b/app/views/tracked_items/index.html.erb
@@ -4,8 +4,9 @@
       <th>ID</th>
       <th>Item Name</th>
       <th>Lowest Price</th>
-      <th>Volume</th>
+      <th>Volume Sold (24)</th>
       <th>Actions</th>
+      <th>Last Request Time</th>
     </tr>
   </thead>
   <tbody>
