--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   </head>
   <body>
     <%= render "layouts/navbar" %>
-    <main style="padding: 5rem;">
+    <main>
       <%= yield %>
     </main>
   </body>
