--- a/app/views/tracked_items/index.html.erb
+++ b/app/views/tracked_items/index.html.erb
@@ -5,8 +5,9 @@
       <th>Item Name</th>
       <th>Lowest Price</th>
       <th>Volume Sold (24)</th>
-      <th>Actions</th>
+      <th>Refresh</th>
       <th>Last Request Time</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -15,4 +16,3 @@
     <% end %>
   </tbody>
 </table>
-<%= console %>
