--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
   <body>
     <%= render "layouts/navbar" %>
     <main>
+      <%= render "layouts/flash_notice" %>
       <%= yield %>
     </main>
   </body>
