--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,13 @@
-<nav class="navbar">
-    <div class="navbar-left-section">
-        <a href="/" class="navbar-home">
-            <span class="navbar-brand-text">Cs2 Invest Helper</span>
-        </a>
-
-    </div>
-    <div class="navbar-right-section">
-        <%# "add new item" button %>
-        <a href="/tracked_items/new" class="navbar-button">
-            <span class="navbar-button-text">+ Add Item</span>
-        </a>
-    </div>
+<nav class="navbar page-bg-dark">
+  <div class="navbar-left-section">
+    <a href="/" class="navbar-home">
+      <span class="navbar-brand-text">Cs2 Invest Helper</span>
+    </a>
+  </div>
+  <div class="navbar-right-section">
+    <%# "add new item" button %>
+    <a href="/tracked_items/new" class="navbar-button">
+      <span class="navbar-button-text">+ Add Item</span>
+    </a>
+  </div>
 </nav>
