--- a/app/views/tracked_items/index.html.erb
+++ b/app/views/tracked_items/index.html.erb
@@ -7,7 +7,7 @@
       <th>Volume Sold (24)</th>
       <th>Refresh</th>
       <th>Last Request Time</th>
-      <th>Actions</th>
+      <th style="width:min-content; white-space: nowrap">Actions</th>
     </tr>
   </thead>
   <tbody>
