--- a/app/views/tracked_items/_tracked_item.html.erb
+++ b/app/views/tracked_items/_tracked_item.html.erb
@@ -1,54 +1,56 @@
 <tr>
   <td><%= item.id %></td>
   <td>
-    <a target="_blank" href=<%= "#{item.steam_market_url}"%>>
+    <a target="_blank" href="<%= item.steam_market_url %>">
       <%= item.item_name %>
     </a>
-      ---
-      <a target="_blank" href=<%= "#{item.steam_market_price_overview_url}"%>>
-      json
+    <a target="_blank" href="<%= item.steam_market_price_overview_url %>">json</a>
   </td>
   <% if item.last_request_success %>
-    <td><%= item.lowest_price || item.median_price + " median" || "no data" %></td>
-      <td><%= item.volume_sold || "no data" %></td>
-    <% else %>
-      <td colspan="2">no data</td>
-    <% end %>
     <td>
-      <%= form_with url: tracked_item_price_overview_json_path(item), method: :post, local: true do %>
-        <%= hidden_field_tag :tracked_item_id, item.id %>
-        <%=
+      <%= item.lowest_price %>
+      <%= (item.median_price + " median price") if !item.lowest_price && item.median_price %>
+      <%= "no data" unless item.lowest_price || item.median_price %>
+    </td>
+    <td><%= item.volume_sold || "no data" %></td>
+  <% else %>
+    <td colspan="2">no data</td>
+  <% end %>
+  <td>
+    <%= form_with url: tracked_item_price_overview_json_path(item), method: :post, local: true do %>
+      <%= hidden_field_tag :tracked_item_id, item.id %>
+      <%=
             submit_tag "Get Price Data",
             class: item.last_request_success ? "btn btn-success" : "btn btn-danger"
           %>
-      <% end %>
-    </td>
-    <td>
-      <%# use readable format %>
-      <%# <%=  %>
-      <% if item.last_request_time %>
-        <%= time_ago_in_words(item.last_request_time) %> ago
-      <% else %>
-        <p style="color:thistle">
-          unknown
-        </p>
-      <% end %>
-    </td>
-    <td>
-      <%= link_to tracked_item_path(item), class: "tracked-item-action color-primary" do %>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="index-action">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
-          <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-        </svg>
-      <% end %>
-      <%= link_to edit_tracked_item_path(item), class: "tracked-item-action color-secondary" do %>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="index-action">
-          <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
-        </svg>
-      <% end %>
-      <%= link_to tracked_item_path(item), method: :delete, data: { confirm: "Are you sure?" }, class: "tracked-item-action color-danger" do %>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="index-action">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-        </svg>
-      <% end %>
-    </tr>
+    <% end %>
+  </td>
+  <td>
+    <%# use readable format %>
+    <%# <%=  %>
+    <% if item.last_request_time %>
+      <%= time_ago_in_words(item.last_request_time) %> ago
+    <% else %>
+      <p style="color:thistle">
+        unknown
+      </p>
+    <% end %>
+  </td>
+  <td style="white-space: nowrap">
+    <%= link_to tracked_item_path(item), class: "tracked-item-action color-primary" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="index-action">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+        <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+      </svg>
+    <% end %>
+    <%= link_to edit_tracked_item_path(item), class: "tracked-item-action color-secondary" do %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="index-action">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+      </svg>
+    <% end %>
+    <%= button_to tracked_item_path(item), method: :delete, class: "tracked-item-action color-danger", form: { style: "display: inline"} do %>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="index-action">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+      </svg>
+    <% end %>
+  </tr>
