--- a/app/views/tracked_items/show.html.erb
+++ b/app/views/tracked_items/show.html.erb
@@ -1,2 +1,61 @@
-<h1>TrackedItems#show</h1>
-<p>Find me in app/views/tracked_items/show.html.erb</p>
+<h1><%= @tracked_item.item_name %></h1>
+<hr style="margin: 1rem 0;">
+<table style="margin: 0 0 0.5rem">
+  <tbody>
+    <tr>
+      <td>ID</td>
+      <td><%= @tracked_item.id %></td>
+    </tr>
+    <tr>
+      <td>Name</td>
+      <td>
+        <%= link_to @tracked_item.item_name, @tracked_item.steam_market_url, target: "blank_" %>
+        --- <%= link_to "(api)", @tracked_item.steam_market_price_overview_url, target: "blank", class: "color-secondary"%>
+      </td>
+    </tr>
+    <tr>
+      <td>Volume Sold</td>
+      <td><%= @tracked_item.volume_sold %></td>
+    </tr>
+    <tr>
+      <td>Lowest Price</td>
+      <td><%= @tracked_item.lowest_price %></td>
+    </tr>
+    <tr>
+      <td>Median Price</td>
+      <td><%= @tracked_item.median_price %></td>
+    </tr>
+    <tr>
+      <td>Last Request Success</td>
+      <td><%= @tracked_item.last_request_success %></td>
+    </tr>
+    <tr>
+      <td>Last Request Time</td>
+      <td><%= @tracked_item.last_request_time %></td>
+    </tr>
+    <tr>
+      <td>Created at</td>
+      <td><%= @tracked_item.created_at %></td>
+    </tr>
+    <tr>
+      <td>Updated at</td>
+      <td><%= @tracked_item.updated_at %></td>
+    </tr>
+  </tbody>
+</table>
+<div style="display: flex; justify-content: space-between; align-items: center">
+  <span>
+    <%= link_to 'Edit', edit_tracked_item_path(@tracked_item), class: "btn btn-primary" %>
+    <%= link_to "Back", tracked_items_path, class: "btn btn-secondary" %>
+  </span>
+  <span>
+    <%= button_to "Delete", tracked_item_path(@tracked_item), method: :delet, class: "btn btn-danger"%>
+  </span>
+</div>
+<pre>
+    <%# add title %>
+    <code style="display: block">
+<h3 style="margin: 0">Price Overview JSON</h3>
+<%= JSON.pretty_generate(@tracked_item.price_overview_json) %>
+    </code>
+</pre>
