wear enum for tracked_item

--- a/app/views/tracked_items/_tracked_item.html.erb
+++ b/app/views/tracked_items/_tracked_item.html.erb
@@ -2,7 +2,7 @@
   <td><%= item.id %></td>
   <td>
     <a target="_blank" href="<%= item.steam_market_url %>">
-      <%= item.item_name %>
+      <%= item.name %>
     </a>
     <a target="_blank" href="<%= item.steam_market_price_overview_url %>">json</a>
   </td>
