--- a/app/views/tracked_items/_form.html.erb
+++ b/app/views/tracked_items/_form.html.erb
@@ -10,8 +10,8 @@
     </div>
   <% end %>
   <div>
-    <%= form.label :item_name, style: "display: block" %>
-    <%= form.text_field :item_name %>
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name %>
   </div>
   <div>
     <%= form.submit %>
