--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,13 +56,15 @@ input {
   color: #000;
 }
 
-input[type="text"], input[type="number"] {
+input[type="text"],
+input[type="number"] {
   outline: none;
   padding: 0.5rem;
   border-radius: 0.4rem;
 }
 
-input[type="text"]:focus, input[type="number"]:focus {
+input[type="text"]:focus,
+input[type="number"]:focus {
   border: 2px solid #0f8ff1;
 }
 
@@ -88,7 +90,8 @@ table {
   width: 100%;
   border-collapse: collapse;
   background-color: #fff;
-  color: #333; /* Set table text color for better contrast */
+  color: #333;
+  /* Set table text color for better contrast */
 }
 
 thead {
@@ -96,7 +99,8 @@ thead {
   color: #fff;
 }
 
-th, td {
+th,
+td {
   padding: 0.75rem;
   text-align: left;
   border-bottom: 1px solid #ddd;
@@ -135,7 +139,7 @@ th {
   text-decoration: none;
 }
 
-.btn-success { 
+.btn-success {
   /* use a green thats nice on the eyes */
   background-color: darkgreen;
   color: #fff;
@@ -167,6 +171,10 @@ th {
   color: #dc3545;
 }
 
+.color-warning {
+  color: #ffc107;
+}
+
 .color-primary {
   color: #0f8ff1;
 }
@@ -179,7 +187,9 @@ th {
   background-color: #28a745;
 }
 
-.bg-warning
+.bg-warning {
+  background-color: #ffc107;
+}
 
 .bg-danger {
   background-color: #dc3545;
@@ -220,4 +230,32 @@ select {
   border: 1px solid #ccc;
   padding: 8px;
   border-radius: 5px;
+}
+
+.item-image {
+  width: 100%;
+  float: left;
+  background-color: darkslateblue;
+  border: 0.1rem solid slateblue;
+  box-shadow: inset 0 0 16px -6px black;
+}
+
+.wear-fn {
+  color: #4b69ff;
+}
+
+.wear-mw {
+  color: #60ad0d;
+}
+
+.wear-ft {
+  color: #e5c100;
+}
+
+.wear-ww {
+  color: #e5c100;
+}
+
+.wear-bs {
+  color: #ff3333;
 }
