--- a/app/views/tracked_items/_tracked_item.html.erb
+++ b/app/views/tracked_items/_tracked_item.html.erb
@@ -4,15 +4,15 @@
     <a target="_blank" href="<%= item.steam_market_url %>">
       <%= item.name %>
     </a>
-    <a target="_blank" href="<%= item.steam_market_price_overview.api_url %>">json</a>
+    <a target="_blank" href="<%= item.steam_market_price_overview&.api_url %>">json</a>
   </td>
-  <% if item.steam_last_request_success %>
+  <% if item.steam_market_price_overview.last_request_success %>
     <td>
-      <%= item.steam_lowest_price.to_s + "€" %>
-      <%= (item.steam_median_price.to_s + "€ median price") if !item.steam_lowest_price && item.steam_median_price %>
-      <%= "no data" unless item.steam_lowest_price || item.steam_median_price %>
+      <%= item.steam_market_price_overview.lowest_price.to_s + "€" %>
+      <%= (item.steam_market_price_overview.median_price.to_s + "€ median price") if !item.steam_market_price_overview.lowest_price && item.steam_market_price_overview.median_price %>
+      <%= "no data" unless item.steam_market_price_overview.lowest_price || item.steam_market_price_overview.median_price %>
     </td>
-    <td><%= item.steam_volume_sold || "no data" %></td>
+    <td><%= item.steam_market_price_overview.volume_sold || "no data" %></td>
   <% else %>
     <td colspan="2">no data</td>
   <% end %>
@@ -22,13 +22,13 @@
       <%= hidden_field_tag :redirect_to, tracked_items_path %>
       <%=
             submit_tag "Get Price Data",
-            class: item.steam_last_request_success ? "btn btn-success" : "btn btn-danger"
+            class: item.steam_market_price_overview.last_request_success ? "btn btn-success" : "btn btn-danger"
           %>
     <% end %>
   </td>
   <td>
-    <% if item.steam_last_request_time %>
-      <%= time_ago_in_words(item.steam_last_request_time) %> ago
+    <% if item.steam_market_price_overview.last_request_time %>
+      <%= time_ago_in_words(item.steam_market_price_overview.last_request_time) %> ago
     <% else %>
       <p style="color:thistle">
         unknown
