refactored steamapi logic into service object (with bugs still)

--- a/app/views/tracked_items/_tracked_item.html.erb
+++ b/app/views/tracked_items/_tracked_item.html.erb
@@ -4,7 +4,7 @@
     <a target="_blank" href="<%= item.steam_market_url %>">
       <%= item.name %>
     </a>
-    <a target="_blank" href="<%= item.steam_market_price_overview&.api_url %>">json</a>
+    <a target="_blank" href="<%= SteamAPIService.price_overview_endpoint(item) %>">json</a>
   </td>
   <% if item.steam_market_price_overview.last_request_success %>
     <td>
